k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attestationhubserver
  namespace: attestationhub
  labels:
    app: attestationhubserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: attestationhubserver
  template:
    metadata:
      labels:
        app: attestationhubserver
    spec:
      securityContext:
        fsGroup: 1000
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Exists"
          effect: "NoSchedule"
      terminationGracePeriodSeconds: 30
      containers:
        - name: attestationhubserver
          image: 211125412565.dkr.ecr.us-east-2.amazonaws.com/fcb-attestationhub-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /attestationhubserver/swagger-ui/index.html
              port: http
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 2

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /attestationhubserver/swagger-ui/index.html
              port: http
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5

          volumeMounts:
            - name: data
              mountPath: /data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: attestationhub-data
