k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attestationhubserver-svc
  namespace: attestationhub
  labels: { app: attestationhubserver }
spec:
  selector: { app: attestationhubserver }
  ports:
    - name: http
      port: 80
      targetPort: 9090
  type: ClusterIP
